<resources>
    <string name="app_name">Surveyor</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="preference_key_file">io.rapidpro.surveyor.prefs</string>
    <string name="token">token</string>
    <string name="pref_title_server">Server</string>
    <string name="pref_key_server">pref_default_server</string>
    <string name="pref_key_current_org">pref_current_org</string>
    <string name="action_sync">Sync</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_org_list">Choose Organization</string>
    <string name="title_activity_org">Organization</string>
    <string name="title_activity_flow_list">Download Flow</string>
    <string name="title_activity_flowrun">Flow Run</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="error_org_missing">Org couldn\'t be found</string>
    <string name="icon_error">\ue000</string>
    <string name="icon_error_outline">\ue001</string>
    <string name="icon_warning">\ue002</string>
    <string name="icon_add_alert">\ue003</string>
    <string name="icon_album">\ue004</string>
    <string name="icon_av_timer">\ue005</string>
    <string name="icon_closed_caption">\ue006</string>
    <string name="icon_equalizer">\ue007</string>
    <string name="icon_explicit">\ue008</string>
    <string name="icon_fast_forward">\ue009</string>
    <string name="icon_fast_rewind">\ue00a</string>
    <string name="icon_games">\ue00b</string>
    <string name="icon_hearing">\ue00c</string>
    <string name="icon_high_quality">\ue00d</string>
    <string name="icon_loop">\ue00e</string>
    <string name="icon_mic">\ue00f</string>
    <string name="icon_mic_none">\ue010</string>
    <string name="icon_mic_off">\ue011</string>
    <string name="icon_movie">\ue012</string>
    <string name="icon_library_add">\ue013</string>
    <string name="icon_library_books">\ue014</string>
    <string name="icon_library_music">\ue015</string>
    <string name="icon_new_releases">\ue016</string>
    <string name="icon_not_interested">\ue017</string>
    <string name="icon_pause">\ue018</string>
    <string name="icon_pause_circle_filled">\ue019</string>
    <string name="icon_pause_circle_outline">\ue01a</string>
    <string name="icon_play_arrow">\ue01b</string>
    <string name="icon_play_circle_filled">\ue01c</string>
    <string name="icon_play_circle_outline">\ue01d</string>
    <string name="icon_playlist_add">\ue01e</string>
    <string name="icon_queue">\ue01f</string>
    <string name="icon_queue_music">\ue020</string>
    <string name="icon_radio">\ue021</string>
    <string name="icon_recent_actors">\ue022</string>
    <string name="icon_repeat">\ue023</string>
    <string name="icon_repeat_one">\ue024</string>
    <string name="icon_replay">\ue025</string>
    <string name="icon_shuffle">\ue026</string>
    <string name="icon_skip_next">\ue027</string>
    <string name="icon_skip_previous">\ue028</string>
    <string name="icon_snooze">\ue029</string>
    <string name="icon_stop">\ue02a</string>
    <string name="icon_subtitles">\ue02b</string>
    <string name="icon_surround_sound">\ue02c</string>
    <string name="icon_video_collection">\ue02d</string>
    <string name="icon_videocam">\ue02e</string>
    <string name="icon_videocam_off">\ue02f</string>
    <string name="icon_volume_down">\ue030</string>
    <string name="icon_volume_mute">\ue031</string>
    <string name="icon_volume_off">\ue032</string>
    <string name="icon_volume_up">\ue033</string>
    <string name="icon_web">\ue034</string>
    <string name="icon_hd">\ue035</string>
    <string name="icon_sort_by_alpha">\ue036</string>
    <string name="icon_airplay">\ue037</string>
    <string name="icon_forward_10">\ue038</string>
    <string name="icon_forward_30">\ue039</string>
    <string name="icon_forward_5">\ue03a</string>
    <string name="icon_replay_10">\ue03b</string>
    <string name="icon_replay_30">\ue03c</string>
    <string name="icon_replay_5">\ue03d</string>
    <string name="icon_business">\ue03e</string>
    <string name="icon_call">\ue03f</string>
    <string name="icon_call_end">\ue040</string>
    <string name="icon_call_made">\ue041</string>
    <string name="icon_call_merge">\ue042</string>
    <string name="icon_call_missed">\ue043</string>
    <string name="icon_call_received">\ue044</string>
    <string name="icon_call_split">\ue045</string>
    <string name="icon_chat">\ue046</string>
    <string name="icon_clear_all">\ue047</string>
    <string name="icon_comment">\ue048</string>
    <string name="icon_contacts">\ue049</string>
    <string name="icon_dialer_sip">\ue04a</string>
    <string name="icon_dialpad">\ue04b</string>
    <string name="icon_email">\ue04c</string>
    <string name="icon_forum">\ue04d</string>
    <string name="icon_import_export">\ue04e</string>
    <string name="icon_invert_colors_off">\ue04f</string>
    <string name="icon_live_help">\ue050</string>
    <string name="icon_location_off">\ue051</string>
    <string name="icon_location_on">\ue052</string>
    <string name="icon_message">\ue053</string>
    <string name="icon_chat_bubble">\ue054</string>
    <string name="icon_chat_bubble_outline">\ue055</string>
    <string name="icon_no_sim">\ue056</string>
    <string name="icon_phone">\ue057</string>
    <string name="icon_portable_wifi_off">\ue058</string>
    <string name="icon_contact_phone">\ue059</string>
    <string name="icon_ring_volume">\ue05a</string>
    <string name="icon_speaker_phone">\ue05b</string>
    <string name="icon_stay_current_landscape">\ue05c</string>
    <string name="icon_stay_current_portrait">\ue05d</string>
    <string name="icon_stay_primary_landscape">\ue05e</string>
    <string name="icon_stay_primary_portrait">\ue05f</string>
    <string name="icon_swap_calls">\ue060</string>
    <string name="icon_textsms">\ue061</string>
    <string name="icon_voicemail">\ue062</string>
    <string name="icon_vpn_key">\ue063</string>
    <string name="icon_phonelink_erase">\ue064</string>
    <string name="icon_phonelink_lock">\ue065</string>
    <string name="icon_phonelink_ring">\ue066</string>
    <string name="icon_phonelink_setup">\ue067</string>
    <string name="icon_present_to_all">\ue068</string>
    <string name="icon_add">\ue069</string>
    <string name="icon_add_box">\ue06a</string>
    <string name="icon_add_circle">\ue06b</string>
    <string name="icon_add_circle_outline">\ue06c</string>
    <string name="icon_archive">\ue06d</string>
    <string name="icon_backspace">\ue06e</string>
    <string name="icon_block">\ue06f</string>
    <string name="icon_clear">\ue070</string>
    <string name="icon_content_copy">\ue071</string>
    <string name="icon_content_cut">\ue072</string>
    <string name="icon_content_paste">\ue073</string>
    <string name="icon_create">\ue074</string>
    <string name="icon_drafts">\ue075</string>
    <string name="icon_filter_list">\ue076</string>
    <string name="icon_flag">\ue077</string>
    <string name="icon_forward">\ue078</string>
    <string name="icon_gesture">\ue079</string>
    <string name="icon_inbox">\ue07a</string>
    <string name="icon_link">\ue07b</string>
    <string name="icon_mail">\ue07c</string>
    <string name="icon_markunread">\ue07d</string>
    <string name="icon_redo">\ue07e</string>
    <string name="icon_remove">\ue07f</string>
    <string name="icon_remove_circle">\ue080</string>
    <string name="icon_remove_circle_outline">\ue081</string>
    <string name="icon_reply">\ue082</string>
    <string name="icon_reply_all">\ue083</string>
    <string name="icon_report">\ue084</string>
    <string name="icon_save">\ue085</string>
    <string name="icon_select_all">\ue086</string>
    <string name="icon_send">\ue087</string>
    <string name="icon_sort">\ue088</string>
    <string name="icon_text_format">\ue089</string>
    <string name="icon_undo">\ue08a</string>
    <string name="icon_font_download">\ue08b</string>
    <string name="icon_access_alarm">\ue08c</string>
    <string name="icon_access_alarms">\ue08d</string>
    <string name="icon_access_time">\ue08e</string>
    <string name="icon_add_alarm">\ue08f</string>
    <string name="icon_airplanemode_inactive">\ue090</string>
    <string name="icon_airplanemode_active">\ue091</string>
    <string name="icon_battery_alert">\ue092</string>
    <string name="icon_battery_charging_full">\ue093</string>
    <string name="icon_battery_full">\ue094</string>
    <string name="icon_battery_std">\ue095</string>
    <string name="icon_battery_unknown">\ue096</string>
    <string name="icon_bluetooth">\ue097</string>
    <string name="icon_bluetooth_connected">\ue098</string>
    <string name="icon_bluetooth_disabled">\ue099</string>
    <string name="icon_bluetooth_searching">\ue09a</string>
    <string name="icon_brightness_auto">\ue09b</string>
    <string name="icon_brightness_high">\ue09c</string>
    <string name="icon_brightness_low">\ue09d</string>
    <string name="icon_brightness_medium">\ue09e</string>
    <string name="icon_data_usage">\ue09f</string>
    <string name="icon_developer_mode">\ue0a0</string>
    <string name="icon_devices">\ue0a1</string>
    <string name="icon_dvr">\ue0a2</string>
    <string name="icon_gps_fixed">\ue0a3</string>
    <string name="icon_gps_not_fixed">\ue0a4</string>
    <string name="icon_gps_off">\ue0a5</string>
    <string name="icon_location_disabled">\ue0a6</string>
    <string name="icon_location_searching">\ue0a7</string>
    <string name="icon_graphic_eq">\ue0a8</string>
    <string name="icon_network_cell">\ue0a9</string>
    <string name="icon_network_wifi">\ue0aa</string>
    <string name="icon_nfc">\ue0ab</string>
    <string name="icon_now_wallpaper">\ue0ac</string>
    <string name="icon_now_widgets">\ue0ad</string>
    <string name="icon_screen_lock_landscape">\ue0ae</string>
    <string name="icon_screen_lock_portrait">\ue0af</string>
    <string name="icon_screen_lock_rotation">\ue0b0</string>
    <string name="icon_screen_rotation">\ue0b1</string>
    <string name="icon_sd_storage">\ue0b2</string>
    <string name="icon_settings_system_daydream">\ue0b3</string>
    <string name="icon_signal_cellular_4_bar">\ue0b4</string>
    <string name="icon_signal_cellular_connected_no_internet_4_bar">\ue0b5</string>
    <string name="icon_signal_cellular_no_sim">\ue0b6</string>
    <string name="icon_signal_cellular_null">\ue0b7</string>
    <string name="icon_signal_cellular_off">\ue0b8</string>
    <string name="icon_signal_wifi_4_bar">\ue0b9</string>
    <string name="icon_signal_wifi_4_bar_lock">\ue0ba</string>
    <string name="icon_signal_wifi_off">\ue0bb</string>
    <string name="icon_storage">\ue0bc</string>
    <string name="icon_usb">\ue0bd</string>
    <string name="icon_wifi_lock">\ue0be</string>
    <string name="icon_wifi_tethering">\ue0bf</string>
    <string name="icon_attach_file">\ue0c0</string>
    <string name="icon_attach_money">\ue0c1</string>
    <string name="icon_border_all">\ue0c2</string>
    <string name="icon_border_bottom">\ue0c3</string>
    <string name="icon_photo_camera">\ue1a4</string>
    <string name="send_message">Send</string>
    <string name="prompt_contact_name">Contact Name</string>
    <string name="action_start_flow">Start Flow</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="action_refresh">Refresh</string>
    <string name="pending_summary_flow">You have pending submissions for this flow to save on the server.</string>
    <string name="transition_chat">transition_chat</string>
</resources>