<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center_horizontal"
              android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="io.rapidpro.surveyorLoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:orientation="vertical">

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/chat_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin">

                <io.rapidpro.surveyor.ui.IconTextView
                    android:id="@+id/download_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_forum"
                    android:textColor="@color/light_gray"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/text_flow_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/download_icon"
                    android:textColor="@color/light_gray"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:paddingTop="1dp"
                    android:layout_marginStart="14dp"
                    android:text="UNICEF U-Report Registration Flow"/>

            </RelativeLayout>

            <EditText android:id="@+id/text_contact_name" android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:hint="@string/prompt_contact_name"
                      android:layout_marginTop="14dp"
                      android:maxLines="1" android:singleLine="true"/>

            <EditText android:id="@+id/text_phone_number" android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:hint="@string/prompt_phone"
                      android:layout_marginTop="2dp"
                      android:imeActionId="@+id/start_flow"
                      android:imeActionLabel="@string/action_start_flow"
                      android:imeOptions="actionUnspecified"
                      android:maxLines="1" android:singleLine="true"
                      android:inputType="phone"/>

            <LinearLayout
                android:id="@+id/language_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="4dp"
                    android:text="Select a Language"
                    android:id="@+id/textView"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="8dp"
                    android:text="This flow supports more than one language. Select the language below for the contact."
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:id="@+id/"/>

                <Spinner
                    android:id="@+id/language_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />
            </LinearLayout>



            <Button android:id="@+id/start_flow_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:onClick="startFlow"
                    android:layout_marginTop="16dp" android:text="@string/action_start_flow"
                    android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

