<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".activity.FlowActivity">

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold"
            android:textSize="22dp"
            android:text="2015 new mother registration flow for reminder campaign"
            android:id="@+id/text_flow_name"/>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_flow_questions"
                android:text="6 Questions"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/text_flow_revision"
                android:text="(v28)"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/button_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:visibility="visible">

            <Button style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="onConfirmFlowRefresh"
                    android:text="@string/action_refresh"
                    android:textStyle="bold" />

            <Button style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="onStartFlow"
                    android:text="@string/action_start_flow"
                    android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:visibility="visible"
        android:background="@color/pending_background"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:id="@+id/container_pending"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <Button style="?android:textAppearanceSmall"
                android:id="@+id/button_pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pending"
                android:textColor="@color/pending_button_text"
                android:onClick="onConfirmPendingSubmissions"
                android:textSize="18dp"
                android:text="3,122"
                android:textStyle="bold" />

        <TextView
            android:layout_marginTop="-10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pending_text"
            android:textSize="15sp"
            android:paddingEnd="5dp"
            android:layout_marginLeft="12dp"
            android:text="@string/pending_summary_flow"/>



    </LinearLayout>

</RelativeLayout>