<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.rapidpro.surveyor.activity.RunActivity">

    <LinearLayout
        android:id="@+id/bottom_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/completed_session_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone"
            android:weightSum="1">

            <Button
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:onClick="onActionDiscard"
                android:text="@string/action_discard"
                android:textStyle="bold" />

            <Button
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:onClick="onActionSave"
                android:text="@string/action_save"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_request_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/primary_button"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="onActionMedia"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="6dp"
            android:paddingEnd="20dp"
            android:paddingBottom="6dp"
            android:visibility="visible">

            <io.rapidpro.surveyor.ui.IconTextView
                android:id="@+id/media_icon"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily=""
                android:minHeight="0dp"
                android:padding="4dp"
                android:text="@string/icon_photo_camera"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/media_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-3dp"
                android:padding="6dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/chat_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:padding="8dp"
            android:paddingTop="5dp">

            <io.rapidpro.surveyor.ui.IconTextView
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:onClick="onActionSend"
                android:text="@string/icon_send"
                android:textColor="@color/light_gray"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/chat_compose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="4dp"
                android:layout_toStartOf="@+id/button_send"
                android:background="@drawable/white_rounded"
                android:hint="@string/send_message"
                android:imeOptions="actionSend"
                android:padding="16dp"
                android:singleLine="true"
                android:transitionName="@string/transition_chat" />

        </RelativeLayout>

    </LinearLayout>


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_options"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/chat_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <io.rapidpro.surveyor.ui.IconTextView
                    android:id="@+id/download_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_forum"
                    android:textColor="@color/light_gray"
                    android:textSize="22sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_flow_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="-1dp"
                    android:layout_toEndOf="@id/download_icon"
                    android:paddingTop="0dp"
                    android:text=""
                    android:textColor="@color/light_gray"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:visibility="gone" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/chat_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>